Added safety checks

--- a/imgui.ini
+++ b/imgui.ini
@@ -68,3 +68,6 @@ Pos=51,101
 Size=746,411
 Collapsed=0
 
+[Docking][Data]
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 CentralNode=1
+
