--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -22.51567268371582,
-            "y": 32.58810806274414,
-            "z": 24.082317352294922
+            "x": 3.4272279739379883,
+            "y": 1.5334091186523438,
+            "z": -2.023829221725464
         },
         "projection": 0,
         "target": {
-            "x": 20.1735897064209,
-            "y": 14.507320404052734,
-            "z": 5.355035781860352
+            "x": -37.31477737426758,
+            "y": -17.937511444091797,
+            "z": 19.44647789001465
         },
         "type": "camera",
         "up": {
@@ -25,55 +25,9 @@
         "type": "world settings"
     },
     {
-        "collider_type": 1,
+        "collider_type": 4,
         "id": 0,
         "is_dynamic": false,
-        "mass": 1.0,
-        "material_path": "project/game/file3.mat",
-        "model_path": "project/game/models/simple_terrain.obj",
-        "name": "project/game/models/simple_terrain",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 6.100006103515625,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 100.0,
-            "y": 100.0,
-            "z": 100.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5379999876022339,
-            "Roughness": 1.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "collider_type": 0,
-        "id": 1,
-        "is_dynamic": true,
         "mass": 1.0,
         "material_path": "",
         "mesh_type": 1,
@@ -82,7 +36,7 @@
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
-            "y": 17.399999618530273,
+            "y": 0.0,
             "z": 0.0
         },
         "relative_position": {
@@ -101,8 +55,8 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_index": "coins collector0",
-        "script_path": "project/game/coins collector.py",
+        "script_index": "",
+        "script_path": "",
         "surface_material": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
@@ -118,7 +72,54 @@
         "type": "entity"
     },
     {
-        "attenuation": 0.004000000189989805,
+        "collider_type": 4,
+        "id": 1,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "material_path": "",
+        "mesh_type": 5,
+        "model_path": "",
+        "name": "Unnamed Entity",
+        "normal_texture_path": "",
+        "position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_index": "",
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
             "b": 255.0,
@@ -131,89 +132,15 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 1,
-        "intensity": 0.0,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 16.5000057220459,
-            "z": 4.0
-        },
-        "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 255.0,
-            "b": 111.25482177734375,
-            "g": 194.50491333007813,
-            "r": 255.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": -0.4729999899864197,
-            "y": -1.0,
-            "z": -0.28600001335144043
-        },
-        "id": 1,
-        "intensity": 0.5,
-        "isChild": false,
-        "light_type": 0,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 5.0,
-            "z": 3.0
-        },
-        "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 22502.771484375,
-            "y": 3.0888822049111943e-41,
-            "z": 1.401298464324817e-45
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 255.0,
-            "b": 93.5328140258789,
-            "g": 255.0,
-            "r": 244.4017791748047
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": 5,
+        "id": 2,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
         "name": "Light",
         "position": {
-            "x": 32.70000076293945,
-            "y": 12.80000114440918,
-            "z": 39.30000305175781
+            "x": 4.0,
+            "y": 4.0,
+            "z": 4.0
         },
         "relative_position": {
             "x": 0,
