Save and Load ambient light color

--- a/project.json
+++ b/project.json
@@ -8,9 +8,9 @@
         },
         "projection": 0,
         "target": {
-            "x": -24.91786766052246,
-            "y": -24.556442260742188,
-            "z": 28.81430435180664
+            "x": -26.755992889404297,
+            "y": -16.39567756652832,
+            "z": 32.88222122192383
         },
         "type": "camera",
         "up": {
@@ -20,6 +20,12 @@
         }
     },
     {
+        "ambientColor": {
+            "w": 0.0,
+            "x": 1.0,
+            "y": 0.0,
+            "z": 0.0
+        },
         "bloom": false,
         "bloomBrightness": 0.0,
         "type": "world settings"
@@ -85,7 +91,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 0,
+        "id": 1063616512,
         "intensity": 1.375,
         "isChild": false,
         "light_type": 1,
