--- a/imgui.ini
+++ b/imgui.ini
@@ -4,34 +4,39 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1181,431
+Pos=1703,706
 Size=400,396
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,480
-Size=682,420
+Pos=371,555
+Size=689,345
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Code Editor Window]
-Pos=1055,480
-Size=370,420
+Pos=1062,555
+Size=363,345
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Objects List]
 Pos=0,56
 Size=369,844
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Inspector Window]
-Pos=949,55
+Pos=1427,56
 Size=473,844
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Scene Editor Window]
 Pos=371,56
-Size=1054,422
+Size=1054,497
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Do you want to quit?]
 Pos=820,417
@@ -67,4 +72,15 @@ Collapsed=0
 Pos=51,101
 Size=746,411
 Collapsed=0
+
+[Docking][Data]
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
+  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=369,983 Selected=0x2C630E19
+  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=1549,983 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1445,983 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1920,497 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,345 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=702,420 Selected=0x1FC0499E
+        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=370,420 Selected=0xF2B1FC4A
+    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=473,983 Selected=0xF58E28BB
 
