Collapsed vertices sucessfully

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,56
-Size=1920,983
+Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][Objects List]
 Pos=0,56
-Size=369,983
+Size=370,983
 Collapsed=0
 
 [Window][Inspector Window]
@@ -67,4 +67,7 @@ Collapsed=0
 Pos=51,101
 Size=746,411
 Collapsed=0
+
+[Docking][Data]
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 CentralNode=1
 
