Chnage default ambient lighting

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,34 +4,39 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1181,431
+Pos=1184,799
 Size=400,396
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,601
-Size=702,438
+Pos=371,480
+Size=370,420
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Code Editor Window]
-Pos=1075,601
-Size=473,438
+Pos=743,480
+Size=628,420
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Objects List]
 Pos=0,56
-Size=370,983
+Size=369,844
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Inspector Window]
-Pos=690,80
-Size=1000,983
+Pos=1373,56
+Size=527,844
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Scene Editor Window]
 Pos=371,56
-Size=1177,543
+Size=1000,422
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Do you want to quit?]
 Pos=820,417
@@ -67,4 +72,15 @@ Collapsed=0
 Pos=51,101
 Size=746,411
 Collapsed=0
+
+[Docking][Data]
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
+  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x2C630E19
+  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1000,844 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1900,422 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1900,420 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=370,420 Selected=0x1FC0499E
+        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=628,420 Selected=0xF2B1FC4A
+    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=527,844 Selected=0xF58E28BB
 
