--- a/imgui.ini
+++ b/imgui.ini
@@ -10,28 +10,33 @@ Collapsed=0
 
 [Window][Assets Explorer]
 Pos=371,495
-Size=370,405
+Size=544,405
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Code Editor Window]
-Pos=743,495
-Size=715,405
+Pos=917,495
+Size=541,405
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Objects List]
 Pos=0,56
 Size=369,844
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Inspector Window]
-Pos=811,180
+Pos=1460,56
 Size=440,844
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Scene Editor Window]
 Pos=371,56
 Size=1087,437
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Do you want to quit?]
 Pos=820,417
@@ -67,4 +72,15 @@ Collapsed=0
 Pos=51,101
 Size=746,411
 Collapsed=0
+
+[Docking][Data]
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x2C630E19
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=1458,844 Split=Y
+      DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=1900,437 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1900,405 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=544,405 Selected=0x1FC0499E
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=541,405 Selected=0xF2B1FC4A
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=440,844 Selected=0xF58E28BB
 
