--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 5.0007219314575195,
-            "y": 14.889764785766602,
-            "z": 9.379022598266602
+            "x": 3.9202799797058105,
+            "y": 10.158743858337402,
+            "z": 26.812509536743164
         },
         "projection": 0,
         "target": {
-            "x": -0.03128337860107422,
-            "y": -26.35456657409668,
-            "z": -18.434656143188477
+            "x": -4.036675453186035,
+            "y": -0.9866914749145508,
+            "z": -21.27573585510254
         },
         "type": "camera",
         "up": {
@@ -212,19 +212,19 @@
         "type": "entity"
     },
     {
-        "collider_type": 4,
+        "collider_type": 0,
         "id": 3,
-        "is_dynamic": false,
+        "is_dynamic": true,
         "mass": 1.0,
         "material_path": "",
-        "mesh_type": 4,
+        "mesh_type": 1,
         "model_path": "",
         "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
-            "x": 4.799999237060547,
-            "y": 7.199989318847656,
-            "z": -3.6000008583068848
+            "x": 9.800000190734863,
+            "y": 8.299999237060547,
+            "z": 0.0
         },
         "relative_position": {
             "x": 0.0,
@@ -232,15 +232,15 @@
             "z": 0.0
         },
         "rotation": {
-            "x": 89.69999694824219,
-            "y": -0.0,
-            "z": 0.6000000238418579
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 5.0,
+            "x": 1.0,
             "y": 1.0,
-            "z": 5.0
+            "z": 1.0
         },
         "script_index": "",
         "script_path": "",
