--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 3.9202799797058105,
-            "y": 10.158743858337402,
-            "z": 26.812509536743164
+            "x": 11.86623764038086,
+            "y": 7.024110794067383,
+            "z": 17.47608184814453
         },
         "projection": 0,
         "target": {
-            "x": -4.036675453186035,
-            "y": -0.9866914749145508,
-            "z": -21.27573585510254
+            "x": -15.464603424072266,
+            "y": -6.543490409851074,
+            "z": -22.134078979492188
         },
         "type": "camera",
         "up": {
@@ -145,7 +145,7 @@
         "roughness_texture_path": "",
         "scale": {
             "x": 100.0,
-            "y": 0.8999999761581421,
+            "y": 0.009999999776482582,
             "z": 101.29998016357422
         },
         "script_index": "",
@@ -242,8 +242,8 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_index": "",
-        "script_path": "",
+        "script_index": "coins collector0",
+        "script_path": "project/game/coins collector.py",
         "surface_material": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
